@@ -1,4 +1,4 @@
-.TH VIFM 1 "9 September 2024" "vifm 0.13"
+.TH VIFM 1 "10 September 2024" "vifm 0.13"
 .\" ---------------------------------------------------------------------------
 .SH NAME
 .\" ---------------------------------------------------------------------------
@@ -2716,6 +2716,11 @@ space, so put a count of 1 (one) before it.
 .TP
 .BI :on[ly]
 switch to a one window view.
+.TP
+.BI "                                         :open"
+.TP
+.BI :o[pen]
+open current file or selection as if Enter was pressed.
 .TP
 .BI "                                         :plugin"
 .TP
