@@ -1,4 +1,4 @@
-*vifm-app.txt*    For Vifm version 0.13  Last change: 2024 September 9
+*vifm-app.txt*    For Vifm version 0.13  Last change: 2024 September 10
 
  Email for bugs and suggestions: <xaizek@posteo.net>
 
@@ -2325,6 +2325,9 @@ order using the '.' operator.  Any whitespace is ignored.
 
 :on[ly]                                        *vifm-:only* *vifm-:on*
     switch to a one window view.
+
+:o[pen]                                        *vifm-:o* *vifm-:open*
+    open current file or selection as if |vifm-Enter| was pressed.
 
                                                *vifm-:plugin*
 :plugin load
