@@ -332,8 +332,10 @@ const char *tags[] = {
 	"vifm-:normal",
 	"vifm-:nun",
 	"vifm-:nunmap",
+	"vifm-:o",
 	"vifm-:on",
 	"vifm-:only",
+	"vifm-:open",
 	"vifm-:plugin",
 	"vifm-:plugins",
 	"vifm-:popd",
