@@ -529,6 +529,10 @@ chistory
 wingo
 cal
 call
+o
+op
+ope
+open
 
 " the words following ":" should be highlighted as :commands
 nnoremap lhs :session
